# TinyBot

./: CMakeLists.txt  LICENSE  README  README.md  README_TinyIslands.md  README_games.txt  README_oct.md  board.cpp  board.h  constants.cpp  constants.h  deck.cpp  deck.h  infer.cpp  infer.h  main.cpp  misc.cpp  misc.h  model.py  npy.cpp  npy.h  npy.sh  pool.cpp  pool.h  sample.sh  search.cpp  search.h  shuffle.py  shuffle2.py  shuffle_0.py  shuffle_0.sh  shuffle_1.py  shuffle_1.sh  shuffle_old_1.py  shuffle_test.py  tb10_1.onnx  tb11t.txt  tinylist.html  tinyrec.html  tinyview.html  (+2 more)
dirichlet/: dirichlet.cpp  dirichlet.h
katago/: data_processing_pytorch.py  metrics_pytorch.py  model_pytorch.py  modelconfigs.py  train.py
pcg/: pcg_extras.cpp  pcg_random.cpp  pcg_uint128.cpp  pcg_uint128.h
